syntax = "proto3";

package gateway;

option go_package = "service/gateway/proto";

import "service/gateway/proto/client.proto";

service Gateway {
  rpc Proxy(stream ToUserMessage) returns (stream ToServerMessage) {}

  rpc AddGateAllowList(AddGateAllowListRequest) returns (AddGateAllowListResponse) {}
}

message ToUserMessage {
  string name = 1;
  bytes data = 2;

  int64 to_uid = 3;
  string to_socketid = 4;

  MIMEType mime = 5;
  MessageType type = 6;
}

message ToServerMessage {
  string name = 1;
  bytes data = 2;

  int64 from_uid = 3;
  string from_socketid = 4;

  MIMEType mime = 5;
  MessageType type = 6;
}

message AddGateAllowListRequest {
  repeated string names = 1;
}
message AddGateAllowListResponse {}
